--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link" [routerLink]="['/favoritos']">Favoritos</a>
                         </li>
+                        <li class="nav-item ml-5">
+                            <a class="nav-link" style="font-size: small;">ESP</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" style="font-size: small;">ENG</a>
+                          </li>
                     </ul>
                 </div>
             </div>
