--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,30 +1,33 @@
-<div class="container">
-    <div class="row">
-        <div class="col-12"></div>
-        <app-header></app-header>
+<div class="container" style="background-color: rgb(245, 245, 245);">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12"></div>
+            <app-header></app-header>
+        </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <section id="home">
-            <div class="">
-                <h1 class="display-"> Star Wars Species </h1>
-                <p class="lead">Todas las especies de Star Wars y sus detalles</p>
-            </div>
-        </section>
+    <div class="container">
+        <div class="row">
+            <section id="home">
+                <div class="">
+                    <h1 class="display-"> Star Wars Species </h1>
+                    <p class="lead">Todas las especies de Star Wars y sus detalles</p>
+                </div>
+            </section>
 
+        </div>
     </div>
-</div>
 
 
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-12"></div>
-        <app-footer></app-footer>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-12"></div>
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
