--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
     <div class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#home">Star Wars Species</a>
+                <a class="navbar-brand" href="#home" >Star Wars Species</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/especies']">Especies</a>
+                            <a class="nav-link" [routerLink]="['/especies']" [translate]="'header.especies'">{{'header.especies'|translate}}</a>
                         </li>
 
                         <li class="nav-item">
