Cambio de estructura

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/especies']" [translate]="'header.especies'">{{'header.especies'|translate}}</a>
+                            <a class="nav-link" [routerLink]="['/especies']">Especies</a>
                         </li>
 
                         <li class="nav-item">
