--- a/src/app/especie/especie.component.html
+++ b/src/app/especie/especie.component.html
@@ -1,24 +1,49 @@
+<div class="container" style="background-color: rgb(224, 222, 222);">
 
-<div class="container">
-    <div class="row">
-        <div class="col8">
-            <table class="table table-striped">
-                <thead>
-                    <th>Raza</th> <th>Clasificación</th> <th>Altura media</th> <th>Color piel</th> <th>Color ojos</th> <th>Esperanza de vida</th> <th>Lenguaje</th> 
-                </thead>
-                <tbody>
-                    <tr *ngFor="let esp of especies">
-                    <td>{{esp.name}}</td>
-                    <td>{{esp.classification}}</td>
-                    <td>{{esp.average_height}}</td>
-                    <td>{{esp.skin_colors}}</td>
-                    <td>{{esp.eye_colors}}</td>
-                    <td>{{esp.average_lifespan}}</td>
-                    <td>{{esp.language}}</td>
-                </tr>
-                </tbody>
-            </table>
+    <div class="col-6">
+        <div class="form-group">
+            <label for="usr">Nombre:</label>
+            <input type="text" [(ngModel)]="especieData.nombre" class="form-control">
         </div>
-        
+        <div class="dropdown my-3 ">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Clasificación
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">mammal</a>
+                <a class="dropdown-item" href="#">reptilian</a>
+                <a class="dropdown-item" href="#">gastropod</a>
+            </div>
+        </div>
+        <button type="button" (click)="eventoBtnBuscar()" class="btn btn-primary btn-blok my-3 mx-3">Buscar</button>
+        <button type="button" class="btn btn-primary btn-blok my-3 mx-3">Limpiar</button>
+    </div>
+
+</div>
+
+<div class="container mt-4">
+    <div class="container">
+        <div class="row">
+            <div class="col8">
+                <table class="table table-striped">
+                    <thead>
+                        <th>Raza</th> <th>Clasificación</th> <th>Altura media</th> <th>Color piel</th> <th>Color ojos</th> <th>Esperanza de vida</th> <th>Lenguaje</th> 
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let esp of especies">
+                        <td>{{esp.name}}</td>
+                        <td>{{esp.classification}}</td>
+                        <td>{{esp.average_height}}</td>
+                        <td>{{esp.skin_colors}}</td>
+                        <td>{{esp.eye_colors}}</td>
+                        <td>{{esp.average_lifespan}}</td>
+                        <td>{{esp.language}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+        </div>
     </div>
 </div>
