--- a/src/app/especie/especie.component.html
+++ b/src/app/especie/especie.component.html
@@ -2,13 +2,13 @@
 
     <div class="col-6">
         <div class="form-group">
-            <label for="usr">Nombre:</label>
-            <input type="text" [(ngModel)]="especieData.nombre" class="form-control">
+            <label for="usr" [translate]="'formulario.nombre'">{{'formulario.nombre'|translate}}</label>
+            <input type="text" class="form-control" placeholder="">
         </div>
         <div class="dropdown my-3 ">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clasificación
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [translate]="'formulario.clasificacion'">
+                {{'formulario.clasificacion'|translate}}
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#">mammal</a>
@@ -16,8 +16,14 @@
                 <a class="dropdown-item" href="#">gastropod</a>
             </div>
         </div>
-        <button type="button" (click)="eventoBtnBuscar()" class="btn btn-primary btn-blok my-3 mx-3">Buscar</button>
-        <button type="button" class="btn btn-primary btn-blok my-3 mx-3">Limpiar</button>
+        <button [translate]="'formulario.buscar'" type="button" (click)="eventoBtnBuscar()" class="btn btn-primary btn-blok my-3 mx-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-binoculars-fill" viewBox="0 0 16 16">
+                <path
+                    d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1h-1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4h4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14H1zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14H9zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5V3z" />
+            </svg>
+            {{'formulario.buscar'|translate}}</button>
+        <button [translate]="'formulario.limpiar'" type="button" class="btn btn-primary btn-blok my-3 mx-3">{{'formulario.limpiar'|translate}}</button>
     </div>
 
 </div>
@@ -28,22 +34,34 @@
             <div class="col8">
                 <table class="table table-striped">
                     <thead>
-                        <th>Raza</th> <th>Clasificación</th> <th>Altura media</th> <th>Color piel</th> <th>Color ojos</th> <th>Esperanza de vida</th> <th>Lenguaje</th> 
+                        <th [translate]="'tabla.raza'">{{'tabla.raza'|translate}}</th>
+                        <th [translate]="'tabla.clasificacion'">{{'tabla.clasificacion'|translate}}</th>
+                        <th [translate]="'tabla.altura'">{{'tabla.altura'|translate}}</th>
+                        <th [translate]="'tabla.piel'">{{'tabla.piel'|translate}}</th>
+                        <th [translate]="'tabla.ojos'">{{'tabla.ojos'|translate}}</th>
+                        <th [translate]="'tabla.vida'">{{'tabla.vida'|translate}}</th>
+                        <th [translate]="'tabla.lenguaje'">{{'tabla.lenguaje'|translate}}</th>
                     </thead>
                     <tbody>
                         <tr *ngFor="let esp of especies">
-                        <td>{{esp.name}}</td>
-                        <td>{{esp.classification}}</td>
-                        <td>{{esp.average_height}}</td>
-                        <td>{{esp.skin_colors}}</td>
-                        <td>{{esp.eye_colors}}</td>
-                        <td>{{esp.average_lifespan}}</td>
-                        <td>{{esp.language}}</td>
-                    </tr>
+                            <td>{{esp.name}}</td>
+                            <td>{{esp.classification}}</td>
+                            <td>{{esp.average_height}}</td>
+                            <td>{{esp.skin_colors}}</td>
+                            <td>{{esp.eye_colors}}</td>
+                            <td>{{esp.average_lifespan}}</td>
+                            <td>{{esp.language}}</td>
+                            <td> <button (click)="anadirFavoritos(esp.name);" class="btn btn-primary"> <svg
+                                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-star" viewBox="0 0 16 16">
+                                        <path
+                                            d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
+                                    </svg> </button> </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
-            
+
         </div>
     </div>
 </div>
