--- a/src/app/c-favoritos/c-favoritos.component.html
+++ b/src/app/c-favoritos/c-favoritos.component.html
@@ -1,4 +1,22 @@
-
 <div class="container mt-4">
-    <h1>Lista favoritos</h1>
-</div> 
+    <div class="container">
+        <div class="row">
+            <div class="col8">
+                <table class="table table-striped">
+                    <thead>
+                        <th [translate]="'tabla.raza'">{{'tabla.raza'|translate}}</th>
+                        <th [translate]="'tabla.clasificacion'">{{'tabla.clasificacion'|translate}}</th>
+                        <th [translate]="'tabla.altura'">{{'tabla.altura'|translate}}</th>
+                        <th [translate]="'tabla.piel'">{{'tabla.piel'|translate}}</th>
+                        <th [translate]="'tabla.ojos'">{{'tabla.ojos'|translate}}</th>
+                        <th [translate]="'tabla.vida'">{{'tabla.vida'|translate}}</th>
+                        <th [translate]="'tabla.lenguaje'">{{'tabla.lenguaje'|translate}}</th>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+</div>
