--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,26 +20,38 @@
     <div class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#home" >Star Wars Species</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#home">Star Wars Species</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/especies']">Especies</a>
+                            <a class="nav-link" [routerLink]="['/especies']" [translate]="'header.especies'"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-file-person" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z" />
+                                    <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                                </svg> {{'header.especies'|translate}}</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/favoritos']">Favoritos</a>
+                            <a class="nav-link" [routerLink]="['/favoritos']" [translate]="'header.favoritos'"><svg xmlns="http://www.w3.org/2000/svg"
+                                    width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                </svg> {{'header.favoritos'|translate}}</a>
                         </li>
                         <li class="nav-item ml-5">
-                            <a class="nav-link" style="font-size: small;">ESP</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" style="font-size: small;">ENG</a>
-                          </li>
+                            <a class="nav-link" (click)="changeLangugeToSpanish();" style="font-size: small;">ESP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" (click)="changeLangugeToEnglish();" style="font-size: small;">ENG</a>
+                        </li>
                     </ul>
                 </div>
             </div>
